added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,47 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+            <h5>Head Element</h5>
+            <ul>
+                <li>The head element contains information about the webpage</li>
+                <li>The head element is also where we link our external css and javascript files</li>
+            </ul>
+            <h5>Body Element</h5>
+            <ul>
+                <li>We use semantic tags to tell the browser what it is we are displaying</li>
+                <li>Inside the opening semantic tag we give class and id attributes to target specific elements for styling and programatic code in our CSS and Javascript respectively</li>
+                <li>When we add any media i.e image, audio or movie files, we must also use the alt attribute to tell any screen reading software what we are displaying.</li>
+                <li>This alt attribute is also displayed if the browser cannot display the file</li>
+            </ul>
+        </ul>
+      </section>
+      <br>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+            <li>CSS file are linked in the head element of a HTML document. the reason for this location is so the browser downloads the file before the HTML body and applies any styles as they load</li>
+            <li>In CSS we use both the class and id to target syling and animations. in this webpage for example the class targets all four note sections and the id targets individual sections</li>
+            <li>By doing this we can apply global styling to all cards then specific styling to differentiate the different subject</li>
+        </ul>
+      </section>
+      <br>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+            <li>git status: checks what brunch we are currently on</li>
+            <li>git checkout -b branch-name: creates new branch and switches to it</li>
+        </ul>
+      </section>
+      <br>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+            <li>Enter your javascript here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
