added some notes to html

--- a/index.html
+++ b/index.html
@@ -49,14 +49,19 @@
         <h2>Git</h2>
         <ul>
             <li>git status: checks what brunch we are currently on</li>
-            <li>git checkout -b branch-name: creates new branch and switches to it</li>
+            <li>git checkout -b branch-name: creates new branch and switches to it.</li>
+            <li>git pull: pulls in the files from the repo.</li>
+            <li>git push: pushes schanges up to the repo on the working branch. allowing us to compare changes, evaluate the code then decide to submit pull request to pull the changes<br> into the main branch and merge the code.</li>
         </ul>
       </section>
       <br>
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-            <li>Enter your javascript here</li>
+            <li>Javascript is the programming language of the browser, it allows us to make programs that run in the browser and change the DOM based on user events</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>For loops allow us to make different changes, IF this THEN that</li>
+            <li>Control flow is the order in which a computor executes code in a script.</li>
         </ul>
       </section>
     </main>
